[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/Snake/Snake.gd" type="Script" id=1]
[ext_resource path="res://characters/Snake/sheet_snake_walk.png" type="Texture" id=2]
[ext_resource path="res://characters/Snake/sheet_snake_hurt.png" type="Texture" id=3]
[ext_resource path="res://characters/Snake/sheet_snake_dead.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 10 )

[sub_resource type="Animation" id=2]

resource_name = "dying"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Walk:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Hurt:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Dead:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Dead:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/Dead:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]

length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Walk:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Hurt:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hurt:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "recover"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Hurt:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/Dead:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]

length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Walk:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Dead:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Hurt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Walk:position")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -4, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( -4, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Walk:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 6, 5, 4, 3, 5, 4, 3, 6, 0, 1, 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 12, 12 ), Vector2( 13, 10 ), Vector2( 19, 10 ), Vector2( 23, 10 ), Vector2( 26, 9 ), Vector2( 24, 9 ), Vector2( 23, 9 ), Vector2( 25, 9 ), Vector2( 19, 10 ), Vector2( 13, 10 ), Vector2( 12, 12 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 20 ), Vector2( 0, 22 ), Vector2( 0, 22 ), Vector2( 0, 22 ), Vector2( 0, 23 ), Vector2( 0, 22 ), Vector2( 0, 22 ), Vector2( 0, 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Middle:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 23 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Middle:shape:radius")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "push"
} ]
}

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 9.0
_sections_unfolded = [ "Resource" ]

[node name="Snake" type="KinematicBody2D" index="0" groups=[
"enemy",
]]

position = Vector2( 0, -1 )
input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Material", "Pickable", "Transform", "Z Index", "collision" ]
Acceleration = 300
BaseSpeed = 20
health_points = 2

[node name="Sprite" type="Sprite" parent="." index="0"]

_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="Walk" type="Sprite" parent="Sprite" index="0"]

texture = ExtResource( 2 )
hframes = 7
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="Hurt" type="Sprite" parent="Sprite" index="1"]

visible = false
modulate = Color( 1, 0.6, 0.6, 0.6 )
position = Vector2( -2, 0 )
texture = ExtResource( 3 )
hframes = 2
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="Dead" type="Sprite" parent="Sprite" index="2"]

visible = false
position = Vector2( -2, 0 )
texture = ExtResource( 4 )
hframes = 2
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="CastWall" type="RayCast2D" parent="Sprite" index="3"]

position = Vector2( -6, 25 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 20 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CastFloor" type="RayCast2D" parent="Sprite" index="4"]

position = Vector2( -24, 14 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 20 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = -10.0
margin_right = 17.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Hint", "Margin", "Mouse", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Hitbox" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]

position = Vector2( 0, 22 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "walk"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/dying = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/walk = SubResource( 4 )
blend_times = [  ]

[node name="Middle" type="CollisionShape2D" parent="." index="4"]

position = Vector2( 0, 23 )
shape = SubResource( 5 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Visible" type="VisibilityNotifier2D" parent="." index="5"]

position = Vector2( 0, 22 )
rect = Rect2( -10, -10, 20, 20 )
_sections_unfolded = [ "Transform" ]

[connection signal="screen_exited" from="Visible" to="." method="_on_Visible_screen_exited"]


